indico_themes_canonical/static/css/_default/header.css
/* ----------- Styles for the conference header ----------- */

/*
Wraps around the upper part of the conference header.
*/
.confheader {
  background-color: var(--brand-background-primary);
  color: #fff;
  overflow: hidden;
  position: relative;
  min-height: 399px;
}

.confheader div {
  color: var(--brand-white) !important;
}

/*
Wraps around the title box
*/
.confTitleBox {
  background: none;
  display: flex;
  margin: auto;
  padding: 80px 20px 0 20px;
  position: relative;
  text-align: left;
  width: var(--full-width);
}

/*
Wraps around the subtitle box
*/
.confSubTitleBox {
  background: none;
  border: 0;
  padding: 0px 20px;
  width: var(--full-width);
  margin: auto;
}

.confSubTitleBox .search-box {
  display: none;
}
.confSubTitleContent {
  border-left: 4px solid var(--brand-primary);
  display: inline-block;
  margin-left: var(--global-margin-left);
  width: 100%;
  padding-left: 1rem;
}

/*
Event Logo placement
*/

.confLogoBox {
  position: relative;
}

.confTitleBox .confLogo {
  position: absolute;
  right: 60px;
  max-height: 12.5rem;
}

/*
The style for the title text.
*/
.confTitle {
  border-left: 4px solid var(--brand-primary);
  display: inline-block;
  margin-left: var(--global-margin-left);
  width: 100%;
  padding-left: 1rem;
}

.headerLogo {
  display: block;
  height: 1101px;
  pointer-events: none;
  position: absolute;
  top: -341px;
  left: -830px;
}

.confTitleBox > .confTitle > h1 {
  color: var(--brand-white) !important;
  font-weight: 100;
  margin-bottom: 1rem;
}
.confTitleBox .conference-title-link {
  font-size: 2.91rem;
  font-weight: 100;
  line-height: normal;
  padding-top: 0;
}

.confTitleBox > .confTitle > h2 {
  color: var(--brand-white) !important;
  font-weight: 300;
  font-size: 1rem;
  line-height: 1.5rem;
}

.datePlace {
  font-size: 1.306rem;
}

/* Overides large margins below custom registration fields */
.ui.form.i-box-content .field:last-child {
  margin-bottom: 0;
}

/* Style for the announcement */
.simpleTextAnnouncement {
  border: none;
  color: var(--brand-white) !important;
  background: var(--brand-background-primary);
  width: var(--full-width);
  margin: 2ex auto;
  border-radius: 2px;
}

/* ---------- Responsive ---------- */
@media screen and (max-width: 1250px) {
  .confTitleBox {
    width: 100%;
    display: block;
    padding: 40px 20px 0 20px;
  }

  .confTitle,
  .confSubTitleContent {
    width: 100%;
    margin-left: 0;
  }

  .confheader {
    height: 316px;
  }

  .headerLogo,
  .confLogoBox {
    display: none;
  }
}

@media screen and (max-width: 1620px) {
  .headerLogo {
    left: -796px;
  }
}

@media screen and (max-width: 660px) {
  .confheader {
    height: 330px;
  }
}

